# webkage

./: .coverage  .pypirc  README.md  __init__.py  application.py  config.py  http_response.py  parser.py  pyproject.toml  router.py  setup.cfg  webkage.jfif  wsgi.py
.github/workflows/: python-publish.yml
src/webkage/: __init__.py  application.py  http_response.py  parser.py  router.py
src/webkage.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: conftest.py  hello.py  test_cookies.py  test_forms.py  test_params.py  test_settings.py  test_static_files.py  test_views.py
tests/views/: cookies.py  forms.py  main.py  params.py  settings.py
