[metadata]
name = webkage
version = 0.5
author = Tobi Balogun
author_email = btobi49@gmail.com
description = A fast micro web framework
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/thelaycon/webkage
project_urls =
    Bug Tracker = https://github.com/thelaycon/webkage/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
